# getTicket

./: .gitignore  README.md  pyproject.toml  ticket.json
getticket/: app.py  wsgi.py
getticket/models/: model.py
uwsgi/: startup.sh  stop.sh  uwsgi.ini
