[tool.poetry]
name = "getticket"
version = "0.1.0"
description = ""
authors = ["Keunreol Park <ritter4u@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
uwsgi = "^2.0.23"
flask-cors = "^4.0.0"
sqlacodegen-v2 = "^0.1.4"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
